terraform/3-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main

  tags = {
    # capital N makes the tag visible by default in the AWS Console
    Name = "${local.env}-igw"
  }
}
